# ranges-gpu

./: .travis.yml  CMakeLists.txt  README.md
include/ranges-gpu/: array.hpp  detail.hpp  span.hpp
include/ranges-gpu/action/: all_of.hpp  any_of.hpp  detail.hpp  none_of.hpp  reduce.hpp  to_cpu.hpp  to_gpu.hpp
include/ranges-gpu/view/: core.hpp  detail.hpp  filter.hpp  iota.hpp  take.hpp  to_gpu.hpp  transform.hpp  zip.hpp
perf/: CMakeLists.txt  perf.hpp  reduce.cu
tests/: CMakeLists.txt  array.cu  examples.cu  span.cu
tests/action/: all_of.cu  any_of.cu  none_of.cu  reduce.cu  to_cpu.cu  to_gpu.cu
tests/view/: filter.cu  iota.cu  take.cu  to_gpu.cu  transform.cu  zip.cu
